<resources>
    <string name="app_name">E-Log Book</string>
    <string name="app_name_test">E-Log Book (Test)</string>
    <string name="Powered_by">Powered by Arethos Logistic System</string>
    <string name="versionNumber">Powered by Arethos Logistic System (V - 3.5.1)</string>
    <string name="als_certificate">(ALS100)</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="action_deleted">Deleted..</string>
    <string name="action_Support">ALS Support</string>
    <string name="terms_conditions">Terms Of Service</string>
    <string name="accept_terms_cond">Please accept terms of service first</string>
    <string name="read_and_agree">I have read and agree to the</string>
    <string name="terms_of_service">terms of service </string>
    <string name="obd_config">OBD Configuration</string>
    <string name="obd_diagnose">OBD Diagnose</string>
    <string name="download_logs">Downloaded Logs</string>
    <string name="rods_log_type">Log Type</string>
    <string name="Generate_Rods">Generate RODS</string>
    <string name="unidentified_login_logout_desc">Data Diagnostic and Malfunction</string>
    <string name="UnidentifiedViewLog">Unidentified Driver Log</string>
    <string name="mal_dia_history">Events History (Cleared)</string>
    <string name="child_text">LOAD#661\n3785 BOUL LAURIER EST,QUEBEC,CA\n\nLOAD#NISD662\n3785 BOUL LAURIER EST,QUEBEC,CA</string>
    <string name="title_activity_maps_activityyy">Map</string>
    <string name="obd_connection_desc">OBD not connected!! Connect your phone with OBD wifi connection. </string>
    <string name="obd_restarted">OBD restarted. </string>
    <string name="wired_obd_details">Wired OBD details</string>
    <string name="obd_conn_unavailable">OBD connection unavailable.</string>
    <string name="no_pdf_viewer">No PDF viewer found.</string>
    <string name="no_viewer_found">No viewer found.</string>
    <string name="reason_for_personal_use">Enter reason for personal use</string>
    <string name="reason_for_claim_">Enter reason to claim unIdentified records</string>
    <string name="reason_for_reject">Enter reason to reject unIdentified records</string>
    <string name="reason_for_reject_company">Enter reason to reject company assigned unIdentified records</string>
    <string name="reason_for_adverse_excptn">Enter reason for Adverse Exception</string>
    <string name="reason_for_adverse_excptn_desc">Adverse driving conditions means snow, ice, sleet, fog, or other adverse weather conditions or unusual road or traffic conditions that were not known, or could not reasonably be known, to: a driver immediately prior to beginning the duty day or immediately before beginning driving after a qualifying rest break or sleeper berth period, or a motor carrier immediately prior to dispatching the driver.</string>
    <string name="excptn_enabled">Exception Enabled</string>
    <string name="exception">Exception</string>
    <string name="cancel_edit_record">Reject records !!</string>
    <string name="cancel_edit_record_desc">Do you want to reject edited records ?</string>
    <string name="edit_log_request">Edit Log Request</string>
    <string name="select_truck_from_list">Select the truck from list</string>
    <string name="preTripIns">Pre-Trip Inspection</string>
    <string name="postTripIns">Post-Trip Inspection</string>
    <string name="prePostTripIns">Pre/Post Trip Inspection</string>
    <string name="TrailerInspection">Trailer Inspection</string>
    <string name="ctPat">CT-PAT Inspection</string>
    <string name="connection_error">Internet connection error</string>
    <string name="change_req_not_deleted">Change request not deleted</string>
    <string name="notification_deleted">Notification has deleted from the list</string>
    <string name="detaildCtPatIns">CT-PAT Inspection detail</string>
    <string name="SavedCtPatIns">Saved CT-PAT Inspections</string>
    <string name="SavedPrePostTripIns">Saved Inspection</string>
    <string name="DefectsCorrected">Defects Corrected</string>
    <string name="DefectsNotCorrected">Defects Not Corrected</string>
    <string name="DefectsNeedToCorrected">Defects need not to be corrected for safe operation</string>
    <string name="per_day">(AS PER DAY)</string>
    <string name="per_shift">(AS PER SHIFT)</string>
    <string name="as_per_curr_status">(AS PER CURRENT STATUS)</string>
    <string name="Deferralenabled">Deferral rule enabled</string>
    <string name="advrs_excptn_enabled">Adverse exception enabled</string>
    <string name="haul_excptn_enabled">16 hour short haul exception enabled</string>
    <string name="cycle_change_check">You can change Cycle in Sleeper/OffDuty.</string>
    <string name="op_zone_change_check">You can change Operating Zone in OnDuty.</string>
    <string name="setting_soundbrightness">Adjust Sound and Brightness</string>
    <string name="storage_per_granted">Storage permission granted</string>
    <string name="loc_per_granted">Location permission granted</string>
    <string name="ble_scan_per_granted">Bluetooth nearby scan permission granted</string>
    <string name="auto_time_setting_desc">Set your device time settings to automatic so that your logbook times run correctly.</string>
    <string name="AdjustTimeZone">Adjust TimeZone</string>
    <string name="AdjustTime">Adjust Time</string>
    <string name="incorrect_time">Incorrect Time !</string>
    <string name="incorrect_timezone">Incorrect Time Zone !</string>
    <string name="incorrect_time_desc">Device CURRENT TIME is inaccurate. Please correct it to use ALS app.</string>
    <string name="incorrect_timezone_desc">Device TIME ZONE is inaccurate. Please correct it to use ALS app.</string>
    <string name="document_corrupted">Error, File not loaded.</string>
    <string name="document_checking">Checking documents, Please wait for few seconds</string>
    <string name="document_not_loaded">Error! Document not loaded</string>
    <string name="halu_excp_not_eligible">You are not eligible for 16 Hours Haul Exception</string>
    <string name="arrival_departure_seal_number">Enter Arrival or Departure seal number</string>
    <string name="selectInsType">Please select Inspection type</string>
    <string name="NoDefects">No Defects</string>
    <string name="SupervisorMechanicsName">Supervisor/Mechanic Name: </string>
    <string name="odometerReading">Odometer Reading</string>
    <string name="odometerReadingTitle">Reading: </string>
    <string name="reading">Reading</string>
    <string name="distanceType">Distance Type: </string>
    <string name="DataTransmissionThrough">Send data to FMCSA via </string>
    <string name="fmcsa_desc">By selecting one of the above options, logs will be sent to FMCSA.</string>
    <string name="kilometer">Kilometers</string>
    <string name="Miles">Miles</string>
    <string name="Service">Service</string>
    <string name="WebService">Web Service</string>
    <string name="BorderCrossing">Border Crossing</string>
    <string name="login_with">Select Login Type</string>
    <string name="main_driver_title">Single Driver</string>
    <string name="co_driver_title">With Co-Driver</string>
    <string name="co_driver_">Co-Driver</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="agree_submit">Agree</string>
    <string name="not_ready">Not Ready</string>
    <string name="co_driver_username">Username</string>
    <string name="co_driver_pass">Password</string>
    <string name="Comments">Comments</string>
    <string name="OutputFileComment">Output File Comments</string>
    <string name="inspctr_Comments">Inspector Comments</string>
    <string name="No_Trip_Assigned">No record found</string>
    <string name="Trip_Expense">Trip Expense</string>
    <string name="add_Expense">Add Expense</string>
    <string name="view_Expense">View Expense</string>
    <string name="done">Done</string>
    <string name="Username">Username</string>
    <string name="crop">Crop</string>
    <string name="Expense_type">Expense Type</string>
    <string name="Currency">Currency</string>
    <string name="Amount">Amount</string>
    <string name="Remarks_if_any">Remarks (if any)</string>
    <string name="Add_Scanned_Documents">Add Scanned Documents</string>
    <string name="Add_trailer_no">Add Trailer number first</string>
    <string name="update_trailer_no">Please update your trailer number before driving</string>
    <string name="yardmove_ended">Yard Move has been ended.</string>
    <string name="Entry_Time">Entry Time</string>
    <string name="Exit_Time">Exit Time</string>
    <string name="Delivery_waiting">Delivery waiting</string>
    <string name="Delivery_waiting_time_reason">Delivery waiting time reason</string>
    <string name="confirm_password_for_this_driver">Please confirm password for this driver</string>
    <string name="confirm_password_dot">Please confirm password to go Home Screen</string>
    <string name="confirm_password_to_exit_dot">Please confirm password to exit DOT inspection mode</string>
    <string name="confirm_password_title">Confirm Password</string>
    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="last_update_time_label">Last location update time</string>
    <string name="location_updated_message">Location updated</string>
    <string name="no_trailer_desc">In case you don\'t have any trailer please select "No Trailer".</string>
    <string name="continue_sign_desc">Do you want to continue with last signature ?</string>
    <string name="continue_haul_exception">Do you want to enable 16 hour haul exception ?</string>
    <string name="no_trailer">No Trailer</string>
    <string name="enter_trailer_number">Enter Trailer Number</string>
    <string name="yard_move_desc">Yard Move descriptions</string>
    <string name="desc">Descriptions</string>
    <string name="enter_remarks">Enter Remarks</string>
    <string name="Inspection_sign">Inspection Signature !!</string>
    <string name="ble_disconnected_by_user">BLE Disconnected by user</string>
    <string name="ble_not_supported">BLE not supported on this device</string>
    <string name="bt_unavailable">Bluetooth unavailable</string>
    <string name="bt_disabled">Bluetooth disabled, turn on and restart</string>
    <string name="South">South</string>
    <string name="North">North</string>
    <string name="Time">Time</string>
    <string name="Odometers_Km">Odometers (Km)</string>
    <string name="Odometers_Miles">Odometers (Miles)</string>
    <string name="EngineHours">Engine Hours</string>
    <string name="EngineHr">Engine Hr</string>
    <string name="EventTypeStatus">Event Type/Status</string>
    <string name="Origin">Origin</string>
    <string name="lat_long">Lat Long</string>
    <string name="Event">Event</string>
    <string name="geo_loc">Geo Loc</string>
    <string name="cmv">CMV</string>
    <string name="dis_last_coord">Dis Last Coord</string>
    <string name="distance_acc">Distance (Acc)</string>
    <string name="hrs_acc">Hrs (Elapsed)</string>
    <string name="Distance_total">Distance (Total)</string>
    <string name="RecordStatus">Record Status</string>
    <string name="RecordOrigin">Record Origin</string>
    <string name="seq_no">Seq. No.</string>
    <string name="seq_id">Seq. ID</string>
    <string name="UsernameOriginator">Username (Originator)</string>
    <string name="CommentOrAnnotation">Comment Or Annotation</string>
    <string name="date_and_time">Date &amp; Time</string>
    <string name="date_date">Date</string>
    <string name="Status">Status</string>
    <string name="End_time">End Time</string>
    <string name="Duration">Duration</string>
    <string name="Location">Location</string>
    <string name="uniden_record">(U)</string>
    <string name="vehMiles">Vehicle Miles</string>
</resources>