<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dutyStatusDotLay"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/dot_titles_bg"
    android:padding="@dimen/margin_short_6"

    >


    <TextView
        android:id="@+id/dateTimeDotTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_and_time"
        android:textStyle="bold"
        android:paddingLeft="@dimen/margin_short_2"
        android:paddingRight="@dimen/margin_short_2"
        android:textSize="@dimen/text_size_14"
        android:textColor="@color/color_eld_theme"
        android:gravity="center_horizontal"
        android:layout_weight="1"
        android:maxLines="2"

        />


    <TextView
        android:id="@+id/eventDotTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Event"
        android:textStyle="bold"
        android:paddingLeft="@dimen/margin_short_2"
        android:paddingRight="@dimen/margin_short_2"
        android:textSize="@dimen/text_size_14"
        android:gravity="center_horizontal"
        android:textColor="@color/color_eld_theme"
        android:layout_weight="1"
        android:maxLines="2"

        />

    <TextView
        android:id="@+id/cmvDotTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cmv"
        android:textStyle="bold"
        android:paddingLeft="@dimen/margin_short_2"
        android:paddingRight="@dimen/margin_short_2"
        android:textSize="@dimen/text_size_14"
        android:gravity="center_horizontal"
        android:textColor="@color/color_eld_theme"
        android:layout_weight="1"
        android:maxLines="2"

        />

    <TextView
        android:id="@+id/distanceAccDotTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/distance_acc"
        android:textStyle="bold"
        android:paddingLeft="@dimen/margin_short_2"
        android:paddingRight="@dimen/margin_short_2"
        android:textSize="@dimen/text_size_14"
        android:gravity="center_horizontal"
        android:textColor="@color/color_eld_theme"
        android:layout_weight="1"
        android:maxLines="2"

        />

    <TextView
        android:id="@+id/hrsAccDotTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hrs_acc"
        android:textStyle="bold"
        android:paddingLeft="@dimen/margin_short_2"
        android:paddingRight="@dimen/margin_short_2"
        android:textSize="@dimen/text_size_14"
        android:gravity="center_horizontal"
        android:textColor="@color/color_eld_theme"
        android:layout_weight="1"
        android:maxLines="2"

        />

    <TextView
        android:id="@+id/distanceTotalDotTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Distance_total"
        android:textStyle="bold"
        android:paddingLeft="@dimen/margin_short_2"
        android:paddingRight="@dimen/margin_short_2"
        android:textSize="@dimen/text_size_14"
        android:gravity="center_horizontal"
        android:textColor="@color/color_eld_theme"
        android:layout_weight="1"
        android:maxLines="2"

        />

    <TextView
        android:id="@+id/recStatusDotTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/RecordStatus"
        android:textStyle="bold"
        android:paddingLeft="@dimen/margin_short_2"
        android:paddingRight="@dimen/margin_short_2"
        android:textSize="@dimen/text_size_14"
        android:gravity="center_horizontal"
        android:textColor="@color/color_eld_theme"
        android:layout_weight="1"
        android:maxLines="2"

        />

    <TextView
        android:id="@+id/recOriginDotTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/RecordOrigin"
        android:textStyle="bold"
        android:paddingLeft="@dimen/margin_short_2"
        android:paddingRight="@dimen/margin_short_2"
        android:textSize="@dimen/text_size_14"
        android:gravity="center_horizontal"
        android:textColor="@color/color_eld_theme"
        android:layout_weight="1"
        android:maxLines="2"

        />

    <TextView
        android:id="@+id/seqNoDotTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/seq_no"
        android:textStyle="bold"
        android:paddingLeft="@dimen/margin_short_2"
        android:textSize="@dimen/text_size_14"
        android:gravity="center_horizontal"
        android:textColor="@color/color_eld_theme"
        android:layout_weight="1"
        android:maxLines="2"

        />



</LinearLayout>