<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/malfunctionChildMainLay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <LinearLayout
        android:id="@+id/malfunctionChildLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/margin_15"
        android:paddingTop="@dimen/margin_short_8"
        android:paddingRight="@dimen/margin_10"
        android:paddingBottom="@dimen/margin_short_8"
        >


        <TextView
            android:id="@+id/unIdenMalTxtVw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingLeft="@dimen/margin_short_3"
            android:text="@string/uniden_record"
            android:textColor="?attr/active_status_bg"
            android:textSize="@dimen/text_size_14"
            android:textStyle="bold"
            android:visibility="invisible"

            />


        <!--blue_button-->
        <TextView
            android:id="@+id/timeMalTxtVw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/Time"
            android:textColor="?attr/active_status_bg"
            android:textSize="@dimen/text_size_14"

            />


        <TextView
            android:id="@+id/endTimeMalTxtVw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/End_time"
            android:textColor="?attr/active_status_bg"
            android:textSize="@dimen/text_size_14"
            android:visibility="gone"

            />


        <TextView
            android:id="@+id/statusMalTxtVw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:gravity="center_horizontal"
            android:text="@string/Status"
            android:textColor="?attr/active_status_bg"
            android:textSize="@dimen/text_size_14"
            android:visibility="gone" />


        <TextView
            android:id="@+id/vehMilesMalTxtVw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/vehMiles"
            android:textColor="?attr/active_status_bg"
            android:textSize="@dimen/text_size_14"

            />

        <TextView
            android:id="@+id/engHoursMalTxtVw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/EngineHr"
            android:textColor="?attr/active_status_bg"
            android:textSize="@dimen/text_size_14"

            />


        <TextView
            android:id="@+id/seqIdMalTxtVw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/Duration"
            android:textColor="?attr/active_status_bg"
            android:textSize="@dimen/text_size_14"
            android:visibility="gone"

            />


    </LinearLayout>


</RelativeLayout>