<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="?attr/dot_titles_bg2"

    >


    <TextView
        android:id="@+id/dateTimeDiffCycleTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_and_time"
        android:paddingLeft="@dimen/margin_20"
        android:paddingTop="@dimen/margin_short_6"
        android:paddingBottom="@dimen/margin_short_6"
        android:textSize="@dimen/text_size_16"
        android:textColor="?attr/txt_eld_color"
        android:gravity="left"
        android:maxLines="1"
        android:visibility="gone"
        />



    <LinearLayout
        android:id="@+id/addHrsDotLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="?attr/dot_titles_bg2"
        android:padding="@dimen/margin_short_6"

    >

    <TextView
        android:id="@+id/dateCycleDotTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_and_time"
        android:textStyle="bold"
        android:paddingLeft="@dimen/margin_short_2"
        android:paddingRight="@dimen/margin_short_2"
        android:textSize="@dimen/text_size_14"
        android:textColor="?attr/txt_eld_color"
        android:gravity="center_horizontal"
        android:layout_weight="1"
        android:maxLines="2"

        />


    <TextView
        android:id="@+id/eventCycleEventTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Event"
        android:textStyle="bold"
        android:paddingLeft="@dimen/margin_short_2"
        android:paddingRight="@dimen/margin_short_2"
        android:textSize="@dimen/text_size_14"
        android:gravity="center_horizontal"
        android:textColor="?attr/txt_eld_color"
        android:layout_weight="1"
        android:maxLines="2"

        />

    <TextView
        android:id="@+id/geoLocCycleTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/geo_loc"
        android:textStyle="bold"
        android:paddingLeft="@dimen/margin_short_2"
        android:paddingRight="@dimen/margin_short_2"
        android:textSize="@dimen/text_size_14"
        android:gravity="center_horizontal"
        android:textColor="?attr/txt_eld_color"
        android:layout_weight="0.9"
        android:maxLines="2"

        />

    <TextView
        android:id="@+id/latLongCycleTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lat_long"
        android:textStyle="bold"
        android:paddingLeft="@dimen/margin_short_2"
        android:paddingRight="@dimen/margin_short_2"
        android:textSize="@dimen/text_size_14"
        android:gravity="center_horizontal"
        android:textColor="?attr/txt_eld_color"
        android:layout_weight="1"
        android:maxLines="2"

        />

    <TextView
        android:id="@+id/distanceLastCoCycleTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dis_last_coord"
        android:textStyle="bold"
        android:paddingLeft="@dimen/margin_short_2"
        android:paddingRight="@dimen/margin_short_2"
        android:textSize="@dimen/text_size_14"
        android:gravity="center_horizontal"
        android:textColor="?attr/txt_eld_color"
        android:layout_weight="1"
        android:maxLines="2"

        />

    <TextView
        android:id="@+id/cmvAHDotTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cmv"
        android:textStyle="bold"
        android:paddingLeft="@dimen/margin_short_2"
        android:paddingRight="@dimen/margin_short_2"
        android:textSize="@dimen/text_size_14"
        android:gravity="center_horizontal"
        android:textColor="?attr/txt_eld_color"
        android:layout_weight="1"
        android:maxLines="2"

        />

    <TextView
        android:id="@+id/recStatusAHDotTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/RecordStatus"
        android:textStyle="bold"
        android:paddingLeft="@dimen/margin_short_2"
        android:paddingRight="@dimen/margin_short_2"
        android:textSize="@dimen/text_size_14"
        android:gravity="center_horizontal"
        android:textColor="?attr/txt_eld_color"
        android:layout_weight="1"
        android:maxLines="2"

        />

    <TextView
        android:id="@+id/recOriginAHDotTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/RecordOrigin"
        android:textStyle="bold"
        android:paddingLeft="@dimen/margin_short_2"
        android:paddingRight="@dimen/margin_short_2"
        android:textSize="@dimen/text_size_14"
        android:gravity="center_horizontal"
        android:textColor="?attr/txt_eld_color"
        android:layout_weight="1"
        android:maxLines="2"

        />

    <TextView
        android:id="@+id/seqNoDotTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/seq_id"
        android:textStyle="bold"
        android:paddingLeft="@dimen/margin_short_2"
        android:textSize="@dimen/text_size_14"
        android:gravity="center_horizontal"
        android:textColor="?attr/txt_eld_color"
        android:layout_weight="1"
        android:maxLines="2"

        />


</LinearLayout>
</LinearLayout>