<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/remarksAnoDotLay"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/dot_titles_bg"
    android:padding="@dimen/margin_short_6"

    >


    <TextView
        android:id="@+id/dateRemarksDotTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_date"
        android:textStyle="bold"
        android:paddingLeft="@dimen/margin_short_2"
        android:paddingRight="@dimen/margin_short_2"
        android:textSize="@dimen/text_size_14"
        android:textColor="@color/color_eld_theme"
        android:gravity="center_horizontal"
        android:layout_weight="1"
        android:maxLines="2"

        />


    <TextView
        android:id="@+id/timeDotTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Time"
        android:textStyle="bold"
        android:paddingLeft="@dimen/margin_short_2"
        android:paddingRight="@dimen/margin_short_2"
        android:textSize="@dimen/text_size_14"
        android:gravity="center_horizontal"
        android:textColor="@color/color_eld_theme"
        android:layout_weight="1"
        android:maxLines="2"

        />

    <TextView
        android:id="@+id/usernameDotTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/UsernameOriginator"
        android:textStyle="bold"
        android:paddingLeft="@dimen/margin_short_2"
        android:paddingRight="@dimen/margin_short_2"
        android:textSize="@dimen/text_size_14"
        android:gravity="center_horizontal"
        android:textColor="@color/color_eld_theme"
        android:layout_weight="1"
        android:maxLines="2"

        />

    <TextView
        android:id="@+id/sqNoRemDotTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/seq_no"
        android:textStyle="bold"
        android:paddingLeft="@dimen/margin_short_2"
        android:paddingRight="@dimen/margin_short_2"
        android:textSize="@dimen/text_size_14"
        android:gravity="center_horizontal"
        android:textColor="@color/color_eld_theme"
        android:layout_weight="1"
        android:maxLines="2"

        />

    <TextView
        android:id="@+id/commAnotnDotTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CommentOrAnnotation"
        android:textStyle="bold"
        android:paddingLeft="@dimen/margin_short_2"
        android:paddingRight="@dimen/margin_short_2"
        android:textSize="@dimen/text_size_14"
        android:gravity="center_horizontal"
        android:textColor="@color/color_eld_theme"
        android:layout_weight="1"
        android:maxLines="2"

        />



</LinearLayout>